<resources>
    <string name="app_name">QuizApp</string>
    <string name="title_main">Main</string>
    <string name="title_settings">Settings</string>
    <string name="title_history">History</string>
    <string name="quiz">Quiz</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">START</string>
    <string name="navigation">Geography</string>
    <string name="Share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="clear_history">Clear history</string>

    <string-array name="difficulty">
        <item>Any type</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="category">
        <item>All</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>


</resources>